--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ info_sec/labs/lab_*/.idea/
 info_sec/labs/lab_*/CMakeLists.txt
 info_sec/labs/lab_*/cmake-build-debug/
 info_sec/labs/lab_*/condition/
-info_sec/labs/lab_*/report/
+model/labs/lab_01/.idea/
