--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ info_sec/labs/lab_*/CMakeLists.txt
 info_sec/labs/lab_*/cmake-build-debug/
 info_sec/labs/lab_*/condition/
 model/labs/lab_01/.idea/
+model/labs/lab_*/src/__pycache__/
