started creating lab_03

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ model/labs/labs_2025/lab_*/src/__pycache__/
 model/labs/labs_2024/lab_*/src/__pycache__/
 
 network/lects/
+model/labs/labs_2025/lab_03/data/
