nir is in progress

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ model/labs/labs_2024/lab_*/src/__pycache__/
 
 network/lects/
 model/labs/labs_2025/lab_03/data/
+model/labs/labs_2025/lab_04/src/queue_system_components/__pycache__/
+model/labs/others
+
+nir/sources/
